TLAB-441 Fix missing line-height for body text, fix date for news and cases not fitting on edge/chrome, use variable for vertical spacing, increase vertical spacing on tables

--- a/themes/trafiklab-2024/assets/sass/_landing.scss
+++ b/themes/trafiklab-2024/assets/sass/_landing.scss
@@ -17,7 +17,7 @@ main.landing {
     width: 100%;
     text-align: justify;
     height: $font-size-hero + 8px;
-    gap: 8px;
+    gap: $vertical-spacing-unit;
 
     span {
       display: inline-block;
@@ -40,7 +40,7 @@ main.landing {
 
   aside.recent-posts {
     .recent-posts__item {
-      margin-bottom: 32px;
+      margin-bottom: 4 * $vertical-spacing-unit;
 
       h3 {
         margin-top: 0;
@@ -64,7 +64,7 @@ main.landing {
     label {
       display: block;
       width: 100%;
-      margin-bottom: 16px;
+      margin-bottom: 2 * $vertical-spacing-unit;
     }
 
     input[type=email] {
