--- a/themes/trafiklab-2024/assets/sass/_table.scss
+++ b/themes/trafiklab-2024/assets/sass/_table.scss
@@ -5,7 +5,7 @@ table {
   table-layout: auto;
   width: 100%;
 
-  margin-bottom: 8px;
+  margin-bottom: 2 * $vertical-spacing-unit;
   border-collapse: collapse;
 
   tr {
