--- a/themes/trafiklab-2024/assets/sass/_typography.scss
+++ b/themes/trafiklab-2024/assets/sass/_typography.scss
@@ -20,7 +20,7 @@ p a:link:hover {
 }
 
 p {
-  margin: 0 0 8px;
+  margin: 0 0 $vertical-spacing-unit;;
 }
 
 ::selection {
